--- a/AT.html
+++ b/AT.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
-    <link rel="stylesheet" href="styles/stylesconq.css">
+    <link rel="stylesheet" href="styles/at.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
@@ -126,16 +126,35 @@ of acting together. </p> </div>
 
 
       <div Id="main2">
+
 <div style="padding:56.25% 1% 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649596606?h=4d80c77451&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-
+<div class="vids">
 <div class="atcon">
-<video style="width:40%; height:40%;"class="at" src="MEDIAAT/VID.mp4" controls muted poster=""></video>
 
 </div>
 
-<div class="imgcon">
-<img src="MEDIAAT/SPREAD.jpg" alt="" style="width:40%;">
+<p style="font-family: sans-serif; display: flex; justify-content:center;"> Process Document </p>
+<div class="row">
+  <div class="column">
+<img src="MEDIAAT/1.png" alt="">
+<img src="MEDIAAT/3.png" alt="">
+<img src="MEDIAAT/SPREAD.jpg" alt="" style="width:100%;">
+</div>
+<div class="column">
+<img src="MEDIAAT/2.png" alt="">
+<img src="MEDIAAT/4.png" alt="">
+<img src="MEDIAAT/5.png" alt="">
+
+
+</div>
+</div>
+
+<div class="anicon">
+<video style="width:70%; height:70%;"src="MEDIAAT/animatic.mp4" autoplay muted loop poster="posterimage.jpg">
+
+</video>
+
 </div>
 <hr>
 
