--- a/Grounded.html
+++ b/Grounded.html
@@ -136,7 +136,7 @@
         <iframe src="https://player.vimeo.com/video/750409212?h=774a636d93&quality=1080p&loop=1&title=0&byline=0&portrait=0" style="margin-top:1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 
-<h2> Initial Outcomes & Idea Development</h2>
+<p style="font-family: sans-serif; display: flex; justify-content:center;"> Initial Outcomes & Idea Development</p>
 
         <div class="row">
           <div class="column">
