--- a/index.html
+++ b/index.html
@@ -108,21 +108,20 @@
   <div class="listcontainer">
     <div class="list">
 
-      <ul>
+      <ul style="padding:0;">
         <hr>
-
         <div class="conqcontainer">
-          <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
+          <p class="conqinfo"> Ongoing motion & graphic design work for Conqueer Bristol. </p>
+
           <a class="conq" href="Conqueer.html">
             <li class="liconq"> <img class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
           </a>
 
           <div class="conqaboutcontainer">
             <p class="conqabout">2021-2022</p>
-
           </div>
         </div>
-
+<div> </div>
         <hr>
 
         <div class="wigcontainer">
@@ -153,7 +152,7 @@
 
 
         <div class="atgthrcontainer">
-          <p class="atgthrinfo"> Team project creating animation from a script about the importance <br> of acting together. </p>
+          <p class="atgthrinfo"> Team project creating animation from a script about the importance of acting together. </p>
           <a class="atgthr" href="AT.html">
             <li class="liatgthr"><img class="imgatgthr" src="imageshome/actog.png">Act Together</li>
           </a>
@@ -166,7 +165,12 @@
 
 
         <div class="talltalescontainer">
-          <p class="talltalesinfo"> University task to create a video based on a family story. </p>
+          <p style="display: flex;
+          width: 30vw;
+          align-content: center;
+          text-align: justify;
+          flex-direction: column-reverse;
+          justify-content: center;"class="talltalesinfo"> University task to create a video based on a family story. </p>
           <a class="talltales" href="talltales.html">
             <li class="litalltales"><img class="imgtalltales" src="imageshome/steph.png">Tall Tales</li>
           </a>
@@ -196,7 +200,12 @@
 
 
         <div class="deepincontainer">
-          <p class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
+          <p style="display: flex;
+          width: 30vw;
+          align-content: center;
+          text-align: justify;
+          flex-direction: column-reverse;
+          justify-content: center;"class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
           <a class="deepin" href="deepin.html">
             <li class="lideepin"><img class="imgdeepin" src="imageshome/deep.png">Deep Inside</li>
           </a>
@@ -271,7 +280,7 @@
         <div class="knowcontainer">
           <p class="knowinfo"> Publication based on personal interview with someone from another <br>country or culture. </p>
           <a class="know" href="knowing.html">
-            <li class="liknow"><img class="imgknow" src="imageshome/imgknow.png">Knowing Me, Knowing You</li>
+            <li class="liknow"><img class="imgknow" src="imageshome/imgknow.png">Knowing Me</li>
           </a>
           <div class="knowboutcontainer">
             <p class="knowbout">2020</p>
@@ -298,16 +307,17 @@
       <p>  Sound Project - Oversized Poster (2021) </p>
 
       <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
-
+      <img  src="imageshome/misc/head.png" alt="Alone Cover">
+      <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
+      <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
 
     </div>
+
     <div class="column">
     <p>  Sound Project - Workshop poster (2022) </p>
-      <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+      <img style="width:100%;"  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
       <p>  Sound Project - Discarded poster outcome (2022) </p>
       <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
-      <p>  Sound Project - Sound Visualisation (2021) </p>
-      <video width="100%" autoplay muted loop src="imageshome/misc/gif.mp4" alt="Alone Cover"></video>
       <p>  On My Radio (2020) </p>
 
       <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
