--- a/fuze.html
+++ b/fuze.html
@@ -175,7 +175,7 @@
     <p> Carousel Designs </p>
     <div class="carouselcontainer">
       <div class="carousel">
-        <video style="margin: 0%; width: 40vw;" loop autoplay muted controls src="MEDIAFUZE/carousel2.mp4" alt=""></video>
+        <video style="margin: 0%; width: 40vw;" loop autoplay muted controls src="MEDIAFUZE/carousel.mp4" alt=""></video>
         <video style="margin: 0%; width: 40vw;" loop autoplay muted controls src="MEDIAFUZE/carousel3.mp4" alt=""></video>
       </div>
     </div>
