--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 
 
         <div class="underlinetop"></div>
-        <li class="top"> <span class="accent">S</span>elected Artwork <br> Print</sup> </li>
+        <li class="top"> <span class="accent">S</span>elected Artwork </sup> </li>
+<div class="top"> Posters </div>
         <div class="underline"></div>
 
       </ul>
@@ -193,10 +194,8 @@
         <div class="image-item">
 
 
-          <p> Garden of Unearthly Delights - Promo (2023)</p>
-          <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img loading="lazy" src="imageshome/misc/GOUD.jpg" alt="Alone Cover"></img>
-          </button>
+          <p> Garden of Unearthly Delights - Blender, Photoshop (2023)</p>
+            <img style="width:100%; "loading="lazy" src="imageshome/misc/GOUD.jpg" alt="Alone Cover"></img>
 
 
         </div>
@@ -214,7 +213,7 @@
       <div class="column">
         <div class="image-item">
 
-          <p> On my radio (2021)</p>
+          <p> On my radio - Blender, Photoshop(2021)</p>
           <img loading="lazy" style="width:100%; " src="imageshome/misc/6.jpg" alt="Alone Cover">
 
 
@@ -225,15 +224,19 @@
   </div>
 
 
-  <div class="container">
+  <div class="container2">
     <div class="image-gallery">
       <div class="column">
         <div class="image-item">
 
-          <p> Roker - Album Cover (2023)<sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img loading="lazy" src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
-          </button>
+
+          <p> Uni brief - Photoshop (2022)<sup>Click Below</sup></p>
+            <img style="width:100%;" loading="lazy" src="imageshome/misc/QUOTE.png" alt="Alone Cover"></img>
+
+
+        <!--  <p> Roker - Album Cover (2023)<sup>Click Below</sup></p>
+            <img style="width:100%;" loading="lazy" src="imageshome/misc/31.jpg" alt="Alone Cover"></img> -->
+
 
 
         </div>
@@ -241,7 +244,7 @@
       <div class="column">
         <div class="image-item">
           <p> Radio Show - Cinema 4D (2022) </p>
-          <img loading="lazy" src="./imageshome/misc/ELLIE.jpg" alt="Radio Show" style="width: 100%; ">
+          <img loading="lazy" src="./imageshome/misc/ellieradio.jpg" alt="Radio Show" style="width: 100%; ">
 
         </div>
       </div>
@@ -249,7 +252,7 @@
         <div class="image-item">
 
           <p> Courtyard Social - Illustrator (2023)</p>
-          <img loading="lazy" style="width: 100%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+          <img loading="lazy" style="width: 100%;" src="imageshome/misc/selling earth.jpg" alt="Alone Cover">
 
         </div>
       </div>
@@ -267,10 +270,6 @@
         <div class="image-item">
 
 
-          <p> Plug-In - Photoshop, Indesign, Cinema 4D (2022) <sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="wig" aria-label="Open wig image gallery" style=" border: 0;">
-            <img loading="lazy" style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
-          </button>
 
 
         </div>
@@ -279,15 +278,7 @@
       <div class="column">
         <div class="image-item">
 
-          <p> Out There - Photoshop, Indesign (2022) <sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="out" aria-label="Open out image gallery" style="background-color: white; border: 0;">
-            <img loading="lazy" style="width:100%;" src="imageshome/misc/1out.png" alt="Alone Cover">
-          </button>
 
-          <p> Heat Death - Photoshop, Indesign, Illustrator (2022)<sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="Heat" aria-label="Open Heat image gallery" style="background-color: white; border: 0;">
-            <img loading="lazy" style="width:100%; height:100%;" src="imageshome/misc/mock1.jpg" alt="Alone Cover">
-          </button>
 
 
         </div>
@@ -296,9 +287,6 @@
       <div class="column">
         <div class="image-item">
 
-          <p> Future of Loneliness - Indesign (2020) <sup>Click Below</sup> </p>
-          <button class="image-pic" data-modal="true" data-gallery="fol" aria-label="Open fol image gallery" style="background-color: white; border: 0;">
-            <img loading="lazy" src="./imageshome/misc/fol1.jpg" alt="Food">
           </button>
         </div>
       </div>
@@ -306,8 +294,134 @@
   </div>
 
 
+  <div class="underlinetop"></div>
+
+  <li class="top"> <span class="accent">P</span>ublications </li>
+  <div class="underline"></div>
+
+  <p style="margin-left: 1%;"> Plug-In - Photoshop, Indesign, Cinema 4D (2022) </p>
+  <div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides1">
+      <div class="numbertext">1 / 5</div>
+      <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
+    </div>
+
+    <div class="mySlides1">
+      <div class="numbertext">2 / 5</div>
+      <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup3.jpg" alt="Alone Cover">
+    </div>
+
+    <div class="mySlides1">
+      <div class="numbertext">3 / 5</div>
+      <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup2.jpg" alt="Alone Cover">
+    </div>
+
+    <div class="mySlides1">
+      <div class="numbertext">4 / 5</div>
+      <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup4.jpg" alt="Alone Cover">
+</div>
+
+<div class="mySlides1">
+  <div class="numbertext">5 / 5</div>
+  <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup6.jpg" alt="Alone Cover">
+</div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+     <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>  </div>
+
+     <p style="margin-left: 1%;"> Future of Loneliness - Indesign (2022)</p>
+  <div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides2 fade">
+      <div class="numbertext">1 / 5</div>
+      <img width="100%"loading="lazy" src="./imageshome/misc/fol1.jpg" alt="Food">
+    </div>
+
+    <div class="mySlides2 fade">
+      <div class="numbertext">2 / 5</div>
+      <img width="100%"loading="lazy" src="./imageshome/misc/fol2.jpg" alt="Food">
+    </div>
+
+    <div class="mySlides2 fade">
+      <div class="numbertext">3 / 5</div>
+      <img width="100%"loading="lazy" src="./imageshome/misc/fol4.jpg" alt="Food">
+    </div>
+
+    <div class="mySlides2 fade">
+      <div class="numbertext">4 / 5</div>
+      <img width="100%"loading="lazy" src="./imageshome/misc/fol5.jpg" alt="Food">
+</div>
+
+<div class="mySlides2 fade">
+  <div class="numbertext">5 / 5</div>
+  <img width="100%"loading="lazy" src="./imageshome/misc/fol6.jpg" alt="Food">
+</div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+     <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>  </div>
+     <p style="margin-left: 1%;"> Heat Death - Photoshop, Indesign(2022)</p>
+
+  <div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides3 fade">
+      <div class="numbertext">1 / 5</div>
+      <img loading="lazy" style="width:100%;" src="imageshome/misc/mock1.jpg" alt="Alone Cover">
+    </div>
+
+    <div class="mySlides3 fade">
+      <div class="numbertext">2 / 5</div>
+      <img loading="lazy" style="width:100%;" src="imageshome/misc/mock2.jpg" alt="Alone Cover">
+    </div>
 
 
+    <div class="mySlides3 fade">
+      <div class="numbertext">3 / 5</div>
+      <img width="100%"loading="lazy" src="./imageshome/misc/mock4.jpg" alt="Food">
+</div>
+
+<div class="mySlides3 fade">
+  <div class="numbertext">4 / 5</div>
+  <img width="100%"loading="lazy" src="./imageshome/misc/mock7.jpg" alt="Food">
+</div>
+
+<div class="mySlides3 fade">
+  <div class="numbertext">5 / 5</div>
+  <img width="100%"loading="lazy" src="./imageshome/misc/mock8.jpg" alt="Food">
+</div>
+
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+     <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>  </div>
+
+
+
+
+  <br>
+  <div class="underlinetop"></div>
+
+  <li class="top"> <span class="accent">L</span>ogos </li>
+  <div class="underline"></div>
+  <p style="margin-left: 1%;"> VTSS - Cinema 4D, Photoshop (2023)</p>
+  <img width="100%"loading="lazy" src="./imageshome/misc/vtss.jpg" alt="Food">
+  <p style="margin-left: 1%;"> SAGA - Photoshop (2023)</p>
+
+  <img width="100%"loading="lazy" src="./imageshome/misc/saga.jpg" alt="Food">
+
+  <p style="margin-left: 1%;"> Courtyard Social - Illustrator (2023)</p>
+  <div style="display:flex; justify-content: center;">
+  <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+  <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO ORANGE.png" alt="Alone Cover">
+
+</div>
+
+<br>
   <div class="underlinetop"></div>
   <li class="top"> <span class="accent">M</span>otion </li>
   <div class="underline"></div>
@@ -318,11 +432,11 @@
       <div class="column">
         <div class="image-item">
 
-          <p> Art of bubble (2023)</p>
+          <p> Art of bubble (2023) - Blender</p>
           <video loading="lazy" style="width: 100%;" controls style="border-radius:5px;" src="imageshome/misc/balls.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
 
-          <p> Roker - Spotify Canvas (2023)</p>
+          <p> Roker Spotify Canvas - Blender (2023)</p>
 
           <video loading="lazy" style="width: 100%;" controls style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
@@ -332,11 +446,8 @@
           <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 6.mp4" alt="Alone Cover"></video>
 
 
-          <p> Cymatics - After Effects (2020) </p>
-
-          <div loading="lazy" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730951920?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="CYMATIC"></iframe></div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
+          <p> Cut It Out - After Effects (2020) </p>
+          <video loading="lazy" style="border-radius:5px; width: 100%;" src="VIDEO/cutit.mp4" loop muted autoplay controls poster="posterimage.jpg"></video>
 
 
         </div>
@@ -376,8 +487,6 @@
           <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
 
-          <p> Cut It Out - After Effects (2020) </p>
-          <video loading="lazy" style="border-radius:5px; width: 100%;" src="VIDEO/cutit.mp4" loop muted autoplay controls poster="posterimage.jpg"></video>
 
 
 
@@ -482,17 +591,30 @@
     }
   </script>
 
-  <script type="module">
-    import initGallery from "./js/galleryApp.js";
-    initGallery('data/galleries.json', {
-      speed: 600,
-    })
+  <script>
+  let slideIndex = [1,1,1];
+  let slideId = ["mySlides1", "mySlides2", "mySlides3"]
+  showSlides(1, 0);
+  showSlides(1, 1);
+  showSlides(1, 2);
+
+  function plusSlides(n, no) {
+    showSlides(slideIndex[no] += n, no);
+  }
+
+  function showSlides(n, no) {
+    let i;
+    let x = document.getElementsByClassName(slideId[no]);
+    if (n > x.length) {slideIndex[no] = 1}
+    if (n < 1) {slideIndex[no] = x.length}
+    for (i = 0; i < x.length; i++) {
+       x[i].style.display = "none";
+    }
+    x[slideIndex[no]-1].style.display = "block";
+  }
   </script>
 
-
-
-  <script language="javascript" src="myScript.js">
-
+  <script language="javascript" src="myScript.js"> </script>
 
   </script>
 
