--- a/index.html
+++ b/index.html
@@ -304,29 +304,42 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides1">
-      <div class="numbertext">1 / 5</div>
+      <div class="numbertext">1 / 6</div>
       <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
     </div>
 
     <div class="mySlides1">
-      <div class="numbertext">2 / 5</div>
+      <div class="numbertext">2 / 6</div>
       <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup3.jpg" alt="Alone Cover">
     </div>
 
     <div class="mySlides1">
-      <div class="numbertext">3 / 5</div>
+      <div class="numbertext">3 / 6</div>
       <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup2.jpg" alt="Alone Cover">
     </div>
 
     <div class="mySlides1">
-      <div class="numbertext">4 / 5</div>
+      <div class="numbertext">4 / 6</div>
       <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup4.jpg" alt="Alone Cover">
 </div>
+
+<div class="mySlides1">
+  <div class="numbertext">5 / 6</div>
+  <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup7.jpg" alt="Alone Cover">
+</div>
+
+<div class="mySlides1">
+  <div class="numbertext">6 / 6</div>
+  <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup9.jpg" alt="Alone Cover">
+</div>
+
 
 <div class="mySlides1">
   <div class="numbertext">5 / 5</div>
   <img loading="lazy" style="width:100%;" src="imageshome/misc/mockup6.jpg" alt="Alone Cover">
 </div>
+
+
 
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
